--- a/ansible.cfg
+++ b/ansible.cfg
@@ -52,7 +52,7 @@ gather_subset = all
 host_key_checking = False
 
 # change the default callback
-#stdout_callback = skippy
+stdout_callback = skippy
 # enable additional callbacks
 #callback_whitelist = timer, mail
 
